test/scc/expr/semantic-errors/112.t
void foo(int* a)
{
}

void test()
{
	const int* a;
    foo(a);
}